# rgu-labs-term2-DSA-big-math

./: .clang-tidy  .gdb_history  .gitignore  1  CMakeLists.txt  Makefile  README.md  \  ]  out.txt  output.txt
examples/: bigint_performance.cpp  main.cpp  test_bigfloat.cpp  test_bigint.cpp
include/: bigcomplex.h  bigfloat.h  bigint.h  bigpoly.h  cstring.h
performance/: karatsuba.py  karatsuba_benchmark.txt  performance_results.csv  requirements.txt  runtime_analysis.txt  runtime_log.txt  test.py
src/bigcomplex/: bigcomplex.cpp  io.cpp  logical.cpp  math.cpp
src/bigfloat/: arithmetics.cpp  bigfloat.cpp  exponential.cpp  helpers.cpp  io.cpp  logarithmic.cpp  logical.cpp  trigonometry.cpp
src/bigint/: advanced.cpp  arithmetics.cpp  bigint.cpp  bitwise.cpp  division.cpp  helpers.cpp  io.cpp  logical.cpp  multiplication.cpp  unsafe.cpp
src/bigpoly/: bigpoly.cpp  io.cpp  logical.cpp  math.cpp
src/cstd/: cstring.cpp
